# OpenGLCherno

./: CMakeLists.txt  main.cpp
res/shaders/: basic.shader
src/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp  VertexBufferLayout.tpp  main.cpp
src/Tests/: Test.cpp  Test.hpp  Test.tpp  TestClearColor.cpp  TestClearColor.hpp  TestTexture2D.cpp  TestTexture2D.hpp
